welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:10: error: '(' expected but '{' found.
		} else if {min<nums(n)
                          ^